--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
         <tbody>
           <tr ng-repeat="course in courses | orderBy:'courseNum'" style="cursor:pointer">
           <td>
-            <a ng-href="#/courses/{{course._id}}">{{ course.courseNum }} {{
+            <a ng-href="#/courses/">{{ course.courseNum }} {{
               course.courseName }}</a>
           </td>
         </tr>
