--- a/public/list.html
+++ b/public/list.html
@@ -17,7 +17,7 @@
     <tbody>
       <tr ng-repeat="course in courses | orderBy:'courseNum'" style="cursor:pointer">
         <td>
-          <a ng-href="#/courses/{{course._id}}">{{ course.courseNum }} {{
+          <a ng-href="/courses/{{course._id}}">{{ course.courseNum }} {{
             course.courseName }}</a>
         </td>
       </tr>
