--- a/public/list.html
+++ b/public/list.html
@@ -15,9 +15,10 @@
 <div class="container">
   <table class="table table-hover">
     <tbody>
+      courses = 
       <tr ng-repeat="course in courses | orderBy:'courseNum'" style="cursor:pointer">
         <td>
-          <a ng-href="/courses/{{course._id}}">{{ course.courseNum }} {{
+          <a ng-href="#/courses/{{course._id}}">{{ course.courseNum }} {{
             course.courseName }}</a>
         </td>
       </tr>
